# auto-clip

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml
auto_clip/: __init__.py  cli.py  config.py  detect.py  hotspots.py  ingest.py  processor_webhook.py  render.py  types.py  utils.py
tests/: test_detect.py  test_render.py
worker/: package-lock.json  package.json  wrangler.toml
worker/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/src/: index.js
